--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <video src="https://assets.coverr.co/videos/mp4/Abstract-Swirls.mp4" autoplay loop muted playsinline></video>
       </div>
       <div class="home-content">
-        <img src="https://placehold.co/150x150/4CAF50/FFFFFF?text=KB" alt="Kaushal Bhagat" class="profile-photo" />
+        <img src=".picofme (1).png" alt="Kaushal Bhagat" class="profile-photo" />
         <h1>KAUSHAL BHAGAT</h1>
         <p>Chemical Engineering Undergraduate at SVNIT Surat</p>
       </div>
@@ -269,3 +269,4 @@
   </script>
 </body>
 </html>
+
