--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <video src="https://assets.coverr.co/videos/mp4/Abstract-Swirls.mp4" autoplay loop muted playsinline></video>
       </div>
       <div class="home-content">
-        <img src=".picofme (1).png" alt="Kaushal Bhagat" class="profile-photo" />
+        <img src="dp.png" alt="Kaushal Bhagat" class="profile-photo" />
         <h1>KAUSHAL BHAGAT</h1>
         <p>Chemical Engineering Undergraduate at SVNIT Surat</p>
       </div>
@@ -269,4 +269,5 @@
   </script>
 </body>
 </html>
+
 
